# infra-agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt
.kiro/specs/infra-monitoring-agent/: design.md  requirements.md  tasks.md
.kiro/specs/vessel-monitoring-enhancements/: design.md  requirements.md  tasks.md
scripts/: start.sh  stop.sh
src/: __init__.py
src/config/: __init__.py  config_loader.py  config_models.py  settings.py
src/models/: __init__.py  data_models.py  enums.py
src/services/: __init__.py  alert_manager.py  approval_workflow.py  data_collector.py  database.py  database_migrations.py  fleet_dashboard.py  influxdb_client.py  jira_service.py  monitoring_orchestrator.py  scheduler.py  scheduler_run_logger.py  security_manager.py  sla_analyzer.py  slack_webhook_handler.py  ticket_lifecycle_manager.py  ticket_manager.py
src/web/: app.py
src/web/static/css/: dashboard.css
src/web/static/js/: dashboard.js
src/web/templates/: config.html  dashboard.html
tests/: test_basic.py
